--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.4.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "bootstrap-vue": "^2.0.0-rc.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
