--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "core-js": "^3.4.3",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-loader": "^3.0.3",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2",
-    "bootstrap-vue": "^2.0.0-rc.11"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
